[gd_scene load_steps=14 format=3 uid="uid://br3vek0yvpimu"]

[ext_resource type="Texture2D" uid="uid://dq1umwuq7whvq" path="res://assets/buildings/home.png" id="2_5ya7l"]
[ext_resource type="FontFile" uid="uid://bin23umv2teyt" path="res://fonts/PressStart2P.ttf" id="3_4gu8n"]
[ext_resource type="Texture2D" uid="uid://4r1d7ubs0exj" path="res://assets/buildings/parc.png" id="3_7mjt0"]
[ext_resource type="Texture2D" uid="uid://bey0gvp6btyiw" path="res://assets/buildings/block.png" id="4_4gu8n"]
[ext_resource type="Script" uid="uid://b3hsvale3jd67" path="res://scenes/gameMap/GameMap.gd" id="5_4gu8n"]
[ext_resource type="Texture2D" uid="uid://7qppk0rokyuv" path="res://assets/buildings/restaurant.png" id="5_iiyg5"]
[ext_resource type="Texture2D" uid="uid://bsr815bqkfrkh" path="res://assets/gui/hood_map.png" id="8_2h160"]
[ext_resource type="Texture2D" uid="uid://rp0l1a8tn22x" path="res://assets/buildings/shop.png" id="8_iiyg5"]
[ext_resource type="Script" uid="uid://c4e7yo1yxjns" path="res://scenes/gameMap/Camera.gd" id="9_2h160"]

[sub_resource type="LabelSettings" id="LabelSettings_iiyg5"]
font = ExtResource("3_4gu8n")

[sub_resource type="LabelSettings" id="LabelSettings_7mjt0"]
font = ExtResource("3_4gu8n")

[sub_resource type="LabelSettings" id="LabelSettings_4gu8n"]
font = ExtResource("3_4gu8n")
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_2h160"]
font = ExtResource("3_4gu8n")
font_color = Color(0.01, 0.01, 0.01, 1)

[node name="GameMap" type="Node2D"]
position = Vector2(18, 24)
script = ExtResource("5_4gu8n")

[node name="HoodMap" type="Sprite2D" parent="."]
position = Vector2(2060, 2054)
scale = Vector2(4, 4)
texture = ExtResource("8_2h160")

[node name="HomeLocation" type="Node" parent="."]

[node name="HomeLabel" type="Label" parent="HomeLocation"]
anchors_preset = -1
anchor_top = 0.0108025
anchor_bottom = 0.0108025
offset_left = 1837.0
offset_top = 1908.0
offset_right = 1901.0
offset_bottom = 1931.0
text = "Home"
label_settings = SubResource("LabelSettings_iiyg5")
metadata/_edit_use_anchors_ = true

[node name="HomeSpriteButton" type="TextureButton" parent="HomeLocation"]
offset_left = 1811.0
offset_top = 1915.0
offset_right = 1939.0
offset_bottom = 2043.0
texture_normal = ExtResource("2_5ya7l")
metadata/_edit_use_anchors_ = true

[node name="BlockLocation" type="Node" parent="."]

[node name="BlockLabel" type="Label" parent="BlockLocation"]
anchors_preset = -1
anchor_top = 0.0108025
anchor_bottom = 0.0108025
offset_left = 1261.0
offset_top = 1908.0
offset_right = 1341.0
offset_bottom = 1931.0
text = "Block"
label_settings = SubResource("LabelSettings_7mjt0")
metadata/_edit_use_anchors_ = true

[node name="BlockSpriteButton" type="TextureButton" parent="BlockLocation"]
offset_left = 1232.0
offset_top = 1915.0
offset_right = 1360.0
offset_bottom = 2043.0
texture_normal = ExtResource("4_4gu8n")
metadata/_edit_use_anchors_ = true

[node name="RestaurantLocation" type="Node" parent="."]

[node name="Restaurant" type="Sprite2D" parent="RestaurantLocation"]
position = Vector2(1516, 1219)
scale = Vector2(0.996094, 0.871094)
texture = ExtResource("5_iiyg5")

[node name="RestaurantLabel" type="Label" parent="RestaurantLocation"]
offset_left = 1478.0
offset_top = 1118.0
offset_right = 1638.0
offset_bottom = 1138.0
text = "Restaurant"
label_settings = SubResource("LabelSettings_4gu8n")
metadata/_edit_use_anchors_ = true

[node name="ParcLocation" type="Node" parent="."]

[node name="ParcLabel" type="Label" parent="ParcLocation"]
anchors_preset = -1
anchor_right = 0.0850694
anchor_bottom = 0.00308642
offset_left = 2270.0
offset_top = 1733.0
offset_right = 2334.0
offset_bottom = 1768.0
text = "Parc
"
label_settings = SubResource("LabelSettings_2h160")
metadata/_edit_use_anchors_ = true

[node name="ParcSpriteButton" type="TextureButton" parent="ParcLocation"]
offset_left = 2270.0
offset_top = 1733.0
offset_right = 2398.0
offset_bottom = 1861.0
texture_normal = ExtResource("3_7mjt0")
metadata/_edit_use_anchors_ = true

[node name="ShopLocation" type="Node" parent="."]

[node name="ShopSpriteButton" type="TextureButton" parent="ShopLocation"]
offset_left = 2142.0
offset_top = 1219.0
offset_right = 2270.0
offset_bottom = 1347.0
texture_normal = ExtResource("8_iiyg5")
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1968, 1553)
zoom = Vector2(0.4, 0.4)
limit_left = 0
limit_top = 0
limit_right = 4015
limit_bottom = 4015
script = ExtResource("9_2h160")
